Iniciando implementação do POST de operações
